# sflr-selection

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy.yaml  release.yaml
scripts/: banlist.sh  top50.sh
src/: main.rs
