[package]
name = "flare-validator-api"
version = "0.1.0"
edition = "2021"
authors = ["tommi <tommi@romeblockchain.com>"]
description = "Flare Validator API with strict eligibility filtering"

[dependencies]
actix-web = "4.3.1"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full"] }
reqwest = { version = "0.12.15", features = ["json"] }
log = "0.4.17"
env_logger = "0.11.8"
chrono = { version = "0.4.24", features = ["serde"] }
parking_lot = "0.12.1"
num_cpus = "1.15.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
